@@ -3,33 +3,34 @@ package top.ellan.polymerconverter;
 import eu.pb4.polymer.common.impl.FakeWorld;
 import eu.pb4.polymer.core.api.item.PolymerItem;
 import eu.pb4.polymer.core.api.item.PolymerItemUtils;
+import eu.pb4.polymer.core.api.utils.PolymerUtils;
 import xyz.nucleoid.packettweaker.PacketContext;
-import net.minecraft.component.DataComponentTypes;
-import net.minecraft.component.type.*;
-import net.minecraft.item.Item;
-import net.minecraft.item.ItemStack;
-import net.minecraft.item.tooltip.TooltipType;
-import net.minecraft.registry.Registries;
-import net.minecraft.registry.RegistryWrapper;
-import net.minecraft.server.MinecraftServer;
-import net.minecraft.server.network.ServerPlayerEntity;
-import net.minecraft.server.world.ServerWorld;
-import net.minecraft.network.packet.c2s.common.SyncedClientOptions;
-import net.minecraft.text.Text;
-import net.minecraft.util.Identifier;
-import net.minecraft.util.Rarity;
-import net.minecraft.world.GameMode;
-import com.mojang.authlib.GameProfile;
 
-// [Fix] 新增导入：用于处理文本序列化
-import net.minecraft.text.TextCodecs;
+// Mojang 映射导入
+import net.minecraft.core.HolderLookup;
+import net.minecraft.core.component.DataComponents;
+import net.minecraft.core.registries.BuiltInRegistries;
+import net.minecraft.resources.Identifier;
+import net.minecraft.world.item.component.*;
+import net.minecraft.world.item.*;
+import net.minecraft.world.food.FoodProperties;
+
+import net.minecraft.server.level.ClientInformation;
+import net.minecraft.server.level.ServerLevel;
+import net.minecraft.server.level.ServerPlayer;
+
+import net.minecraft.network.chat.Component;
+import net.minecraft.network.chat.ComponentSerialization;
+
+import com.mojang.authlib.GameProfile;
 import com.mojang.serialization.JsonOps;
 import com.google.gson.JsonElement;
 
 import java.util.*;
 
+@SuppressWarnings({"null", "unused", "resource"})
 public class ConverterLogic {
-
+    
     public static Map<String, Object> convert(PolymerItem polymerItem) {
         Map<String, Object> itemConfig = new LinkedHashMap<>();
         
@@ -38,18 +39,39 @@ public class ConverterLogic {
             return itemConfig;
         }
 
-        // 1. 准备环境
-        ItemStack serverStack = new ItemStack((Item) polymerItem);
-        ServerPlayerEntity fakePlayer = createSafeFakePlayer();
-        PacketContext ctx = fakePlayer != null ? PacketContext.create(fakePlayer) : PacketContext.create();
-        // 获取注册表查找器供 Text 序列化使用
-        RegistryWrapper.WrapperLookup registryLookup = fakePlayer != null ? fakePlayer.getRegistryManager() : null;
+        ServerPlayer fakePlayer = null;
+        PacketContext ctx = null;
+        HolderLookup.Provider registryLookup = null;
 
         try {
+            ItemStack serverStack = new ItemStack((Item) polymerItem);
+            
+            fakePlayer = createSafeFakePlayer();
+            
+            if (fakePlayer != null) {
+                ctx = PacketContext.create(fakePlayer);
+                registryLookup = fakePlayer.registryAccess();
+            } else {
+                ctx = PacketContext.create();
+            }
+            
+            if (ctx == null) {
+                itemConfig.put("_error", "Failed to create PacketContext");
+                itemConfig.put("material", "barrier");
+                return itemConfig;
+            }
+
             // --- A. 基础材质与模型 ---
             Item clientBaseItem = polymerItem.getPolymerItem(serverStack, ctx);
-            itemConfig.put("material", Registries.ITEM.getId(clientBaseItem).toString());
+            if (clientBaseItem == null) {
+                itemConfig.put("_error", "getPolymerItem returned null");
+                itemConfig.put("material", "barrier");
+                return itemConfig;
+            }
+            
+            itemConfig.put("material", BuiltInRegistries.ITEM.getKey(clientBaseItem).toString());
 
+            // 获取模型ID
             Identifier modelId = polymerItem.getPolymerItemModel(serverStack, ctx);
             if (modelId != null) {
                 Map<String, Object> modelData = new LinkedHashMap<>();
@@ -59,23 +81,33 @@ public class ConverterLogic {
             }
 
             // --- B. 获取客户端堆栈 ---
-            ItemStack clientStack = PolymerItemUtils.getPolymerItemStack(serverStack, TooltipType.BASIC, ctx);
+            TooltipFlag tooltipType = fakePlayer != null ? 
+                PolymerUtils.getTooltipType(fakePlayer) : TooltipFlag.Default.NORMAL;
             
+            ItemStack clientStack = PolymerItemUtils.getPolymerItemStack(serverStack, tooltipType, ctx);
+            
+            if (clientStack == null || clientStack.isEmpty()) {
+                itemConfig.put("_error", "getPolymerItemStack returned null or empty stack");
+                return itemConfig;
+            }
+
             Map<String, Object> dataMap = new LinkedHashMap<>();
             Map<String, Object> components = new LinkedHashMap<>();
 
             // --- 1. 显示名称 ---
-            if (clientStack.contains(DataComponentTypes.CUSTOM_NAME)) {
-                Text nameText = clientStack.getName();
-                dataMap.put("item-name", serializeText(nameText, registryLookup)); 
+            if (clientStack.has(DataComponents.CUSTOM_NAME)) {
+                Component nameText = clientStack.getHoverName();
+                if (nameText != null) {
+                    dataMap.put("item-name", serializeText(nameText, registryLookup));
+                }
             }
 
             // --- 2. 描述 (Lore) ---
-            if (clientStack.contains(DataComponentTypes.LORE)) {
-                LoreComponent lore = clientStack.get(DataComponentTypes.LORE);
-                if (lore != null) {
+            if (clientStack.has(DataComponents.LORE)) {
+                ItemLore lore = clientStack.get(DataComponents.LORE);
+                if (lore != null && !lore.lines().isEmpty()) {
                     List<String> loreLines = new ArrayList<>();
-                    for (Text line : lore.lines()) {
+                    for (Component line : lore.lines()) {
                         loreLines.add(serializeText(line, registryLookup));
                     }
                     dataMap.put("lore", loreLines);
@@ -83,21 +115,21 @@ public class ConverterLogic {
             }
 
             // --- 3. CustomModelData ---
-            if (clientStack.contains(DataComponentTypes.CUSTOM_MODEL_DATA)) {
-                CustomModelDataComponent cmd = clientStack.get(DataComponentTypes.CUSTOM_MODEL_DATA);
+            if (clientStack.has(DataComponents.CUSTOM_MODEL_DATA)) {
+                CustomModelData cmd = clientStack.get(DataComponents.CUSTOM_MODEL_DATA);
                 if (cmd != null) {
                     if (!cmd.floats().isEmpty()) {
-                        itemConfig.put("custom-model-data", (int) cmd.floats().get(0).floatValue());
+                        itemConfig.put("custom-model-data", (int) cmd.floats().getFirst().floatValue());
                     }
                     if (!cmd.strings().isEmpty()) {
                         itemConfig.put("custom-model-data-strings", cmd.strings());
                     }
                 }
             }
-            
+
             // --- 4. Item Model ---
-            if (!itemConfig.containsKey("model") && clientStack.contains(DataComponentTypes.ITEM_MODEL)) {
-                Identifier itemModelId = clientStack.get(DataComponentTypes.ITEM_MODEL);
+            if (!itemConfig.containsKey("model") && clientStack.has(DataComponents.ITEM_MODEL)) {
+                Identifier itemModelId = clientStack.get(DataComponents.ITEM_MODEL);
                 if (itemModelId != null) {
                     Map<String, Object> modelData = new LinkedHashMap<>();
                     modelData.put("type", "minecraft:model");
@@ -107,34 +139,39 @@ public class ConverterLogic {
             }
 
             // --- 5. 附魔 ---
-            if (clientStack.contains(DataComponentTypes.ENCHANTMENTS)) {
-                ItemEnchantmentsComponent enchants = clientStack.get(DataComponentTypes.ENCHANTMENTS);
+            if (clientStack.has(DataComponents.ENCHANTMENTS)) {
+                var enchants = clientStack.get(DataComponents.ENCHANTMENTS);
                 if (enchants != null && !enchants.isEmpty()) {
                     Map<String, Integer> enchConfig = new LinkedHashMap<>();
-                    enchants.getEnchantmentEntries().forEach(entry -> {
-                        String enchId = entry.getKey().getIdAsString();
-                        int level = entry.getIntValue();
-                        enchConfig.put(enchId, level);
+                    enchants.entrySet().forEach(entry -> {
+                        entry.getKey().unwrapKey().ifPresent(key -> {
+                            String enchId = key.identifier().toString();
+                            int level = entry.getIntValue();
+                            enchConfig.put(enchId, level);
+                        });
                     });
-                    dataMap.put("enchantments", enchConfig);
+                    if (!enchConfig.isEmpty()) {
+                        dataMap.put("enchantments", enchConfig);
+                    }
                 }
             }
 
             // --- 6. 属性修饰符 ---
-            if (clientStack.contains(DataComponentTypes.ATTRIBUTE_MODIFIERS)) {
-                AttributeModifiersComponent attrs = clientStack.get(DataComponentTypes.ATTRIBUTE_MODIFIERS);
+            if (clientStack.has(DataComponents.ATTRIBUTE_MODIFIERS)) {
+                ItemAttributeModifiers attrs = clientStack.get(DataComponents.ATTRIBUTE_MODIFIERS);
                 if (attrs != null && !attrs.modifiers().isEmpty()) {
                     List<Map<String, Object>> attrList = new ArrayList<>();
                     attrs.modifiers().forEach(entry -> {
                         Map<String, Object> attrMap = new LinkedHashMap<>();
-                        attrMap.put("type", entry.attribute().getIdAsString());
-                        attrMap.put("slot", entry.slot().asString());
-                        attrMap.put("amount", entry.modifier().value());
-                        attrMap.put("operation", entry.modifier().operation().asString());
+                        entry.attribute().unwrapKey().ifPresent(key -> {
+                            attrMap.put("type", key.identifier().toString());
+                        });
+                        attrMap.put("slot", entry.slot().getSerializedName());
+                        attrMap.put("amount", entry.modifier().amount());
+                        attrMap.put("operation", entry.modifier().operation().name().toLowerCase());
                         attrMap.put("id", entry.modifier().id().toString());
                         attrList.add(attrMap);
                     });
-                    
                     Map<String, Object> attrComp = new LinkedHashMap<>();
                     attrComp.put("modifiers", attrList);
                     components.put("minecraft:attribute_modifiers", attrComp);
@@ -142,36 +179,51 @@ public class ConverterLogic {
             }
 
             // --- 7. 染色 ---
-            if (clientStack.contains(DataComponentTypes.DYED_COLOR)) {
-                DyedColorComponent dyedColor = clientStack.get(DataComponentTypes.DYED_COLOR);
+            if (clientStack.has(DataComponents.DYED_COLOR)) {
+                DyedItemColor dyedColor = clientStack.get(DataComponents.DYED_COLOR);
                 if (dyedColor != null) {
                     int rgb = dyedColor.rgb();
-                    String hex = String.format("#%06X", (0xFFFFFF & rgb));
+                    String hex = String.format(Locale.ROOT, "#%06X", (0xFFFFFF & rgb));
                     dataMap.put("dyed-color", hex);
                 }
             }
 
             // --- 8. 杂项属性 ---
-            if (clientStack.contains(DataComponentTypes.ENCHANTMENT_GLINT_OVERRIDE)) {
-                Boolean glint = clientStack.get(DataComponentTypes.ENCHANTMENT_GLINT_OVERRIDE);
-                if (glint != null) dataMap.put("enchantment-glint-override", glint);
+            if (clientStack.has(DataComponents.ENCHANTMENT_GLINT_OVERRIDE)) {
+                Boolean glint = clientStack.get(DataComponents.ENCHANTMENT_GLINT_OVERRIDE);
+                if (glint != null) {
+                    dataMap.put("enchantment-glint-override", glint);
+                }
             }
-            if (clientStack.contains(DataComponentTypes.UNBREAKABLE)) {
+
+            if (clientStack.has(DataComponents.UNBREAKABLE)) {
                 dataMap.put("unbreakable", true);
             }
-            if (clientStack.contains(DataComponentTypes.MAX_DAMAGE)) {
-                dataMap.put("max-damage", clientStack.get(DataComponentTypes.MAX_DAMAGE));
+
+            if (clientStack.has(DataComponents.MAX_DAMAGE)) {
+                Integer maxDamage = clientStack.get(DataComponents.MAX_DAMAGE);
+                if (maxDamage != null) {
+                    dataMap.put("max-damage", maxDamage);
+                }
             }
-            if (clientStack.contains(DataComponentTypes.DAMAGE)) {
-                 dataMap.put("damage", clientStack.get(DataComponentTypes.DAMAGE));
+
+            if (clientStack.has(DataComponents.DAMAGE)) {
+                Integer damage = clientStack.get(DataComponents.DAMAGE);
+                if (damage != null) {
+                    dataMap.put("damage", damage);
+                }
             }
-            if (clientStack.contains(DataComponentTypes.REPAIR_COST)) {
-                 dataMap.put("repair-cost", clientStack.get(DataComponentTypes.REPAIR_COST));
+
+            if (clientStack.has(DataComponents.REPAIR_COST)) {
+                Integer repairCost = clientStack.get(DataComponents.REPAIR_COST);
+                if (repairCost != null) {
+                    dataMap.put("repair-cost", repairCost);
+                }
             }
 
             // --- 9. 食物 ---
-            if (clientStack.contains(DataComponentTypes.FOOD)) {
-                FoodComponent food = clientStack.get(DataComponentTypes.FOOD);
+            if (clientStack.has(DataComponents.FOOD)) {
+                FoodProperties food = clientStack.get(DataComponents.FOOD);
                 if (food != null) {
                     Map<String, Object> foodMap = new LinkedHashMap<>();
                     foodMap.put("nutrition", food.nutrition());
@@ -180,36 +232,40 @@ public class ConverterLogic {
                     components.put("minecraft:food", foodMap);
                 }
             }
-            
-            // --- 10. 消耗品 ---
-            if (clientStack.contains(DataComponentTypes.CONSUMABLE)) {
-                ConsumableComponent consumable = clientStack.get(DataComponentTypes.CONSUMABLE);
-                if (consumable != null) {
-                    Map<String, Object> consumeMap = new LinkedHashMap<>();
-                    consumeMap.put("consume_seconds", consumable.consumeSeconds());
-                    if (consumable.useAction() != null) {
-                        consumeMap.put("animation", consumable.useAction().name().toLowerCase());
+
+            // --- 10. 消耗品 (1.21.2+) ---
+            try {
+                if (clientStack.has(DataComponents.CONSUMABLE)) {
+                    Consumable consumable = clientStack.get(DataComponents.CONSUMABLE);
+                    if (consumable != null) {
+                        Map<String, Object> consumeMap = new LinkedHashMap<>();
+                        consumeMap.put("consume_seconds", consumable.consumeSeconds());
+                        if (consumable.animation() != null) {
+                            consumeMap.put("animation", consumable.animation().name().toLowerCase());
+                        }
+                        components.put("minecraft:consumable", consumeMap);
                     }
-                    components.put("minecraft:consumable", consumeMap);
                 }
-            }
+            } catch (Throwable ignored) {}
 
             // --- 11. 冷却 ---
-            if (clientStack.contains(DataComponentTypes.USE_COOLDOWN)) {
-                UseCooldownComponent cooldown = clientStack.get(DataComponentTypes.USE_COOLDOWN);
-                if (cooldown != null) {
-                     Map<String, Object> cdMap = new LinkedHashMap<>();
-                     cdMap.put("seconds", cooldown.seconds());
-                     cooldown.cooldownGroup().ifPresent(group -> 
-                         cdMap.put("group", group.toString())
-                     );
-                     components.put("minecraft:use_cooldown", cdMap);
+            try {
+                if (clientStack.has(DataComponents.USE_COOLDOWN)) {
+                    UseCooldown cooldown = clientStack.get(DataComponents.USE_COOLDOWN);
+                    if (cooldown != null) {
+                        Map<String, Object> cdMap = new LinkedHashMap<>();
+                        cdMap.put("seconds", cooldown.seconds());
+                        cooldown.cooldownGroup().ifPresent(group -> 
+                            cdMap.put("group", group.toString())
+                        );
+                        components.put("minecraft:use_cooldown", cdMap);
+                    }
                 }
-            }
+            } catch (Throwable ignored) {}
 
             // --- 12. 工具 ---
-            if (clientStack.contains(DataComponentTypes.TOOL)) {
-                ToolComponent tool = clientStack.get(DataComponentTypes.TOOL);
+            if (clientStack.has(DataComponents.TOOL)) {
+                Tool tool = clientStack.get(DataComponents.TOOL);
                 if (tool != null) {
                     Map<String, Object> toolMap = new LinkedHashMap<>();
                     toolMap.put("default_mining_speed", tool.defaultMiningSpeed());
@@ -219,72 +275,74 @@ public class ConverterLogic {
             }
 
             // --- 13. 稀有度 ---
-            if (clientStack.contains(DataComponentTypes.RARITY)) {
-                Rarity rarity = clientStack.get(DataComponentTypes.RARITY);
+            if (clientStack.has(DataComponents.RARITY)) {
+                Rarity rarity = clientStack.get(DataComponents.RARITY);
                 if (rarity != null) {
                     dataMap.put("rarity", rarity.name().toLowerCase());
                 }
             }
 
-            if (clientStack.contains(DataComponentTypes.TOOLTIP_STYLE)) {
-                Identifier style = clientStack.get(DataComponentTypes.TOOLTIP_STYLE);
-                if (style != null) {
-                    dataMap.put("tooltip-style", style.toString());
+            // --- 14. 盔甲纹饰 ---
+            try {
+                if (clientStack.has(DataComponents.TRIM)) {
+                    var trim = clientStack.get(DataComponents.TRIM);
+                    if (trim != null) {
+                        Map<String, Object> trimMap = new LinkedHashMap<>();
+                        trim.material().unwrapKey().ifPresent(key -> 
+                            trimMap.put("material", key.identifier().toString())
+                        );
+                        trim.pattern().unwrapKey().ifPresent(key -> 
+                            trimMap.put("pattern", key.identifier().toString())
+                        );
+                        components.put("minecraft:trim", trimMap);
+                    }
                 }
-            }
-
-            // --- 14. 盔甲纹饰 (Trim) ---
-            if (clientStack.contains(DataComponentTypes.TRIM)) {
-                var trim = clientStack.get(DataComponentTypes.TRIM);
-                if (trim != null) {
-                    Map<String, Object> trimMap = new LinkedHashMap<>();
-                    trim.material().getKey().ifPresent(key -> 
-                        trimMap.put("material", key.getValue().toString())
-                    );
-                    trim.pattern().getKey().ifPresent(key -> 
-                        trimMap.put("pattern", key.getValue().toString())
-                    );
-                    components.put("minecraft:trim", trimMap);
-                }
-            }
+            } catch (Throwable ignored) {}
 
             // --- 15. 可装备 ---
-            if (clientStack.contains(DataComponentTypes.EQUIPPABLE)) {
-                EquippableComponent equippable = clientStack.get(DataComponentTypes.EQUIPPABLE);
-                if (equippable != null) {
-                    Map<String, Object> eqMap = new LinkedHashMap<>();
-                    eqMap.put("slot", equippable.slot().asString());
-                    equippable.assetId().ifPresent(id -> 
-                        eqMap.put("model", id.toString())
-                    );
-                    components.put("minecraft:equippable", eqMap);
+            try {
+                if (clientStack.has(DataComponents.EQUIPPABLE)) {
+                    var equippable = clientStack.get(DataComponents.EQUIPPABLE);
+                    if (equippable != null) {
+                        Map<String, Object> eqMap = new LinkedHashMap<>();
+                        eqMap.put("slot", equippable.slot().getSerializedName());
+                        equippable.assetId().ifPresent(id -> 
+                            eqMap.put("model", id.toString())
+                        );
+                        components.put("minecraft:equippable", eqMap);
+                    }
                 }
-            }
-            
+            } catch (Throwable ignored) {}
+
             // --- 16. 唱片机 ---
-            if (clientStack.contains(DataComponentTypes.JUKEBOX_PLAYABLE)) {
-                JukeboxPlayableComponent jukebox = clientStack.get(DataComponentTypes.JUKEBOX_PLAYABLE);
-                if (jukebox != null) {
-                    Map<String, Object> jbMap = new LinkedHashMap<>();
-                    jukebox.song().getKey().ifPresent(key -> 
-                        jbMap.put("song", key.getValue().toString())
-                    );
-                    components.put("minecraft:jukebox_playable", jbMap);
+            try {
+                if (clientStack.has(DataComponents.JUKEBOX_PLAYABLE)) {
+                    JukeboxPlayable jukebox = clientStack.get(DataComponents.JUKEBOX_PLAYABLE);
+                    if (jukebox != null) {
+                        Map<String, Object> jbMap = new LinkedHashMap<>();
+                        // 使用 key() 而不是 unwrapKey()
+                        var songHolder = jukebox.song();
+                        if (songHolder.key().isPresent()) {
+                            jbMap.put("song", songHolder.key().get().identifier().toString());
+                        }
+                        components.put("minecraft:jukebox_playable", jbMap);
+                    }
                 }
-            }
+            } catch (Throwable ignored) {}
 
             // --- 17. 烟花 ---
-            if (clientStack.contains(DataComponentTypes.FIREWORKS)) {
-                FireworksComponent fireworks = clientStack.get(DataComponentTypes.FIREWORKS);
+            if (clientStack.has(DataComponents.FIREWORKS)) {
+                Fireworks fireworks = clientStack.get(DataComponents.FIREWORKS);
                 if (fireworks != null) {
-                     dataMap.put("flight", fireworks.flightDuration());
+                    dataMap.put("flight", fireworks.flightDuration());
                 }
             }
 
+            // 组装最终数据
             if (!components.isEmpty()) {
                 dataMap.put("components", components);
             }
-            
+
             if (!dataMap.isEmpty()) {
                 itemConfig.put("data", dataMap);
             }
@@ -292,46 +350,68 @@ public class ConverterLogic {
         } catch (Exception e) {
             itemConfig.put("_error", "Conversion error: " + e.getMessage());
             itemConfig.put("_error_type", e.getClass().getSimpleName());
+            itemConfig.put("_stack_trace", getStackTraceString(e));
             itemConfig.put("material", "barrier");
         }
 
         return itemConfig;
     }
 
-    // --- 辅助方法 ---
-
-    /**
-     * [Fix] 使用 Codec + RegistryOps 序列化 Text，解决 Serializer 类丢失问题
-     */
-    private static String serializeText(Text text, RegistryWrapper.WrapperLookup registries) {
+    private static String serializeText(Component text, HolderLookup.Provider registries) {
+        if (text == null) {
+            return "";
+        }
+        
         if (registries != null) {
             try {
-                // 使用 1.21+ 标准 Codec 方式序列化
-                // getOps(JsonOps.INSTANCE) 会创建一个带有注册表上下文的 Ops
-                return TextCodecs.CODEC.encodeStart(registries.getOps(JsonOps.INSTANCE), text)
-                        .map(JsonElement::toString)
-                        .result()
-                        .orElseGet(() -> "<!i>" + text.getString());
-            } catch (Exception e) {
-                // 忽略错误，回退到纯文本
-            }
+                return ComponentSerialization.CODEC
+                    .encodeStart(registries.createSerializationContext(JsonOps.INSTANCE), text)
+                    .result()
+                    .map(JsonElement::toString)
+                    .orElseGet(() -> "<!i>" + text.getString());
+            } catch (Exception ignored) {}
         }
-        // 没有注册表或发生异常时回退到纯文本
-        return "<!i>" + text.getString(); 
+        
+        return "<!i>" + text.getString();
     }
 
-    private static ServerPlayerEntity createSafeFakePlayer() {
+    private static ServerPlayer createSafeFakePlayer() {
         try {
-            return new ServerPlayerEntity(
-                (MinecraftServer) null,
-                (ServerWorld) FakeWorld.INSTANCE_UNSAFE,
+            ServerLevel world = null;
+            if (FakeWorld.INSTANCE_UNSAFE instanceof ServerLevel serverLevel) {
+                world = serverLevel;
+            } else if (FakeWorld.INSTANCE_REGULAR instanceof ServerLevel serverLevel) {
+                world = serverLevel;
+            }
+
+            if (world == null) return null;
+
+            return new ServerPlayer(
+                world.getServer(),
+                world,
                 new GameProfile(UUID.randomUUID(), "PolymerItemConverter"),
-                SyncedClientOptions.createDefault()
+                ClientInformation.createDefault()
             ) {
-                @Override public GameMode getGameMode() { return GameMode.SURVIVAL; }
+                @Override
+                public boolean isSpectator() { return false; }
+                @Override
+                public boolean isCreative() { return false; }
             };
         } catch (Exception e) {
+            System.err.println("Failed to create fake player: " + e.getMessage());
             return null;
         }
+    }
+
+    private static String getStackTraceString(Exception e) {
+        StringBuilder sb = new StringBuilder();
+        for (StackTraceElement element : e.getStackTrace()) {
+            sb.append(element.toString()).append("\n");
+            if (sb.length() > 500) { 
+                sb.append("...(truncated)");
+                break;
+            }
+        }
+        return sb.toString();
     }
 }
